[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/title.tres" type="Theme" id=1]
[ext_resource path="res://resources/title_text.tres" type="Theme" id=2]
[ext_resource path="res://epilogue.gd" type="Script" id=3]
[ext_resource path="res://resources/dihjauti.regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://prologue.gd" type="Script" id=5]
[ext_resource path="res://ui/music_toggle.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=1]
extra_spacing_bottom = -5
font_data = ExtResource( 4 )

[node name="epilogue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
is_scandal = true
is_victory = true

[node name="Backdrop" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )

[node name="epilogue" type="Control" parent="."]
anchor_left = 0.319336
anchor_top = 0.0716667
anchor_right = 0.694336
anchor_bottom = 0.296667
margin_bottom = 1.52588e-05
rect_min_size = Vector2( 0, 60 )
rect_clip_content = true
size_flags_vertical = 3
script = ExtResource( 5 )
speed = 7.0

[node name="Label" type="Label" parent="epilogue"]
anchor_top = -1.74718
anchor_right = 1.0
anchor_bottom = 14.5862
margin_bottom = -985.0
rect_min_size = Vector2( 300, 100 )
custom_fonts/font = SubResource( 1 )
text = "




"
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="victory_box" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -291.5
margin_top = -48.0
margin_right = 291.5
margin_bottom = 48.0
rect_pivot_offset = Vector2( -645, -414 )

[node name="Title" type="Label" parent="victory_box"]
margin_right = 583.0
margin_bottom = 49.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.772549, 0.54902, 0.227451, 1 )
text = "Victory"
align = 1
valign = 1

[node name="Subtitle" type="Label" parent="victory_box"]
margin_top = 53.0
margin_right = 583.0
margin_bottom = 88.0
theme = ExtResource( 2 )
text = "The Seventh Coalition has formed in time to meet Napoleon."
align = 1

[node name="defeat_box" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -257.0
margin_top = -53.5
margin_right = 257.0
margin_bottom = 53.5

[node name="Title" type="Label" parent="defeat_box"]
margin_right = 514.0
margin_bottom = 49.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0.568627, 0.0745098, 0.0745098, 1 )
text = "Failure"
align = 1
valign = 1

[node name="Subtitle" type="Label" parent="defeat_box"]
margin_top = 53.0
margin_right = 514.0
margin_bottom = 88.0
theme = ExtResource( 2 )
text = "No agreement is reached. Napoleon conquers Europe."
align = 1

[node name="Subtitle2" type="Label" parent="defeat_box"]
margin_top = 92.0
margin_right = 514.0
margin_bottom = 106.0
text = "every attendee must support the formation of a coalition army"
align = 1
autowrap = true

[node name="Any key" type="Label" parent="."]
anchor_top = 0.941667
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 0.000183105
theme = ExtResource( 2 )
text = "Press Space to Restart"
align = 1

[node name="initial_space" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
text = "




"

[node name="scandal_text" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
text = "“Your Highness, I deliver a message from the King, ‘You know as well as I that the throne cannot be
linked to any machinations, lest we be beggared by the debt owed.

Long live the King.

For he must be preserved above all.’”


"

[node name="victory_text" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
text = "The greatest endeavors in political machinations are those that look from the outside like the inexorable tide of history constraining the choices of men. If there be an architect, then he remains hidden – able to reap the benefits of his actions and his schemes, but washed of responsibility should his ventures fail.

Thus is Napoleon defeated. For he is but one man against the entirety of Europe. Thus is my brother restored to his throne, there to remain.

Long live the King.

For I shall one day be the King.
"

[node name="defeat_text" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
text = "The issue with Napoleon is not an issue of persons, but of times. Many detractors of the war proclaimed that any capital spent fighting Napoleon is ultimately without purpose. One can raise an army, spend millions of livres and lives, and one can depose a pretender to the throne. What one cannot do is remove the Napoleon shaped hole in our society’s center, that always seek to raise the next Napoleon to ascendancy.

So, then, let Napoleon be Napoleon. Let him bear the weight of true rule, of true responsibility. Let all human failures rest upon his shoulders. Let him be the lightning rod of the people’s wrath when humanity inevitably fails itself.

Long live the Emperor.

For I am still a king under his rule.
"

[node name="music_toggle" parent="." instance=ExtResource( 6 )]
anchor_left = 1.0
anchor_top = 1.0
margin_left = -64.0
margin_top = -64.0
margin_right = 0.0
margin_bottom = 0.0
